<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Symptom Tracker</string>
    <string name="hello_world">Hello world!</string>
    
    <!-- New user screen -->
    <string name="we_need_info">Tell us about you.</string>
    <string name="enter_app">Enter application</string>
    <string name="name">Name</string> 
    <string name="name_hint">Jane Smith</string>   
    <string name="dob">Date of Birth</string>
    <string name="mm">MM</string>
    <string name="dd">DD</string>
    <string name="yyyy">YYYY</string>
    
    <!-- Main menu screen -->
    <string name="menu">Menu</string>
    <string name="new_symptom">New Symptom</string>
    <string name="symptom_history">Symptom History</string>
    <string name="open_symptom">Open Symptoms</string>
    <string name="report_symptoms">Report Symptoms</string>
    
    <!-- Whole body screen -->
    <string name="tell_us_where_hurts">Tell us where it hurts.</string>
    <string name="head">Head</string>
    <string name="foot">Foot</string>
    
    <!-- Head symptoms -->
    <string name="tell_us_how_it_hurts">Tell us how it hurts.</string>
    <string name="headache">Headache</string>
    <string name="fever">Fever</string>
    <string name="blurred_vision">Blurred Vision</string>
    
    <!-- Foot symptoms -->
    <string name="pain">Pain</string>
    <string name="limp">Limp</string>    
    <string name="soreness">Soreness</string>
    
    <string name="action_settings">Settings</string>

</resources>
