<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >
    
	<Button 
	    android:id="@+id/go_to_whole_body_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/new_symptom"
        android:onClick="addNewSymptom"/>
	
	<Button 
	    android:id="@+id/go_to_symptom_history_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/symptom_history"
        android:onClick="openSymptomHistory"/>
	
	<Button 
	    android:id="@+id/go_to_open_symptom_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/open_symptom"
        android:onClick="openSymptom"/>
	
	<Button 
	    android:id="@+id/go_to_report_symptoms_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/report_symptoms"
        android:onClick="reportSymptoms"/>

</LinearLayout>
