<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >
    
    <TextView
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#9ecae1"
        android:textSize="40sp"
        android:textStyle="italic"
        android:layout_marginTop="20dp"
        android:text="@string/tell_us_how_it_hurts"/>
    
    <RadioGroup
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:layout_marginTop="40dp">
	
        <RadioButton android:id="@+id/choose_headache"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/headache"
	        android:onClick="onRadioButtonClicked"/>

	    <RadioButton android:id="@+id/choose_fever"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/fever"
	        android:layout_marginTop="20dp"
	        android:onClick="onRadioButtonClicked"/>
	    
	    <RadioButton android:id="@+id/choose_blurred_vision"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/blurred_vision"
	        android:layout_marginTop="20dp"
	        android:onClick="onRadioButtonClicked"/>
	    
	</RadioGroup>

</LinearLayout>
