<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >
    
    <TextView
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#9ecae1"
        android:textSize="40sp"
        android:textStyle="italic"
        android:layout_marginTop="20dp"
        android:text="@string/tell_us_how_it_hurts"/>
    
    <RadioGroup
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:layout_marginTop="40dp">
	
        <RadioButton android:id="@+id/choose_foot_pain"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/pain"
	        android:onClick="onRadioButtonClicked"/>

                <SeekBar 
            android:minWidth="400dp"/>
        
	    <RadioButton android:id="@+id/choose_foot_limp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/limp"
	        android:layout_marginTop="20dp"
	        android:onClick="onRadioButtonClicked"/>
	    
	            <SeekBar 
            android:minWidth="400dp"/>
	    
	    <RadioButton android:id="@+id/choose_foot_soreness"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/soreness"
	        android:layout_marginTop="20dp"
	        android:onClick="onRadioButtonClicked"/>
	    
	            <SeekBar 
            android:minWidth="400dp"/>
	    
	</RadioGroup>

</LinearLayout>
