<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.ladieshack.symptomtracker.MainActivity" >

    <TextView
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#9ecae1"
        android:textSize="60sp"
        android:textStyle="italic"
        android:layout_marginTop="60dp"
        android:text="@string/we_need_info"/>
    
    <EditText android:id="@+id/name_input"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name" />
    
    <Button 
        android:id="@+id/go_to_main_menu_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/enter_app"
        android:onClick="goToMainMenu"/>
        
</LinearLayout>
